# Project9

./: CMakeLists.txt  README.md  a.out  convert.cpp  convert.h  magick.cpp  magick.h  main.cpp
DevilTuts/: HelloWorld.cpp
Magick++/: magick++.cpp
include/: DisjointSetForest.h  constants.h  convert.h  imagematrix.h  magick.h  options.h  segmentation.h
src/: DisjointSetForest.cpp  convert.cpp  imagematrix.cpp  magick.cpp  main.cpp  options.cpp  segmentation.cpp
